--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -8,12 +8,12 @@
     color: #008170;
     text-decoration: none;
     font-family: "Bebas Neue", sans-serif;
-    font-size: 20px;
+    font-size: 25px;
     font-style: normal;
 }
 
 .nav-link:hover {
-    color: #005B41;
+    color: #ffffff;
 }
 
 .nav-img {
