--- a/src/styles/contactme.css
+++ b/src/styles/contactme.css
@@ -27,7 +27,6 @@
     padding: 20px;
 }
 
-
 .sub-tittle {
     font-family: "Bebas Neue", sans-serif;
     font-size: 40px;
@@ -78,13 +77,29 @@
 .info-box {
     position: relative;
     z-index: 1;
+    overflow: hidden;
+    /* Oculta cualquier contenido que se salga del contenedor */
 }
 
 .contact-image {
-    top: 0;
-    left: 100px;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    /* Limitar el ancho máximo al 100% del contenedor */
+    height: auto;
     z-index: -1;
     object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 100px;
+}
+
+@media (max-width: 768px) {
+    .contact-image {
+        max-width: 80%;
+        /* Ajustar el ancho máximo en pantallas pequeñas */
+        position: static;
+        /* Mantener la imagen en el flujo del documento */
+        margin-top: 100px;
+        /* Añadir un poco de espacio por encima */
+    }
 }
