--- a/src/styles/contactme.css
+++ b/src/styles/contactme.css
@@ -6,6 +6,8 @@
     flex-wrap: wrap;
 }
 
+
+
 .form-contact {
     transition: transform 0.3s;
     background-color: #ffffff6f;
@@ -83,12 +85,11 @@
 
 .contact-image {
     max-width: 100%;
-    /* Limitar el ancho máximo al 100% del contenedor */
     height: auto;
     z-index: -1;
     object-fit: cover;
-    position: absolute;
-    top: 0;
+    box-sizing: border-box;
+    top: 50px;
     left: 0;
     margin-left: 100px;
 }
