--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -17,11 +17,11 @@
 .home-name {
     font-size: 2.5rem;
     margin-top: 20px;
-    color: black;
+    color: #41413D;
 }
 
 .home-profession {
     font-size: 1.5rem;
-    color: #666;
+    color: #41413D;
     margin-top: 10px;
 }
