--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rakkas&display=swap');
 
 .navbar {
-    background-color: #0F0F0F;
+    background-color: #41413D;
 }
 
 .nav-link {
-    color: #008170;
+    color: #6982AF;
     text-decoration: none;
     font-family: "Bebas Neue", sans-serif;
     font-size: 25px;
@@ -23,11 +23,6 @@
     margin-right: 15px;
 }
 
-.nav-link.active,
-.nav-link:focus {
-    color: #005B41;
-}
-
 /* Media queries para pantallas pequeñas */
 @media (max-width: 767.98px) {
     .sidebar.collapse {
@@ -37,15 +32,26 @@
     .sidebar.show {
         transform: translateX(0);
     }
+
+
+
+    .navbar-brand::after {
+        content: "";
+    }
+
+    .navbar-brand {
+        visibility: hidden;
+    }
+
+    .navbar-brand::after {
+        visibility: visible;
+    }
 }
 
-/* Estilo del botón de hamburguesa en estado normal */
 .custom-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
-/* Cambiar el color de fondo del botón de hamburguesa */
 .custom-toggler {
     border-color: transparent;
-    /* Opcional, elimina el borde */
 }
