--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -9,7 +9,7 @@
 .project-card {
     transition: transform 0.3s;
     background-color: #ffffff6f;
-    border: solid #0F0F0F;
+    border: solid 1px #0F0F0F;
     color: white;
     font-family: "Roboto", sans-serif;
     font-size: 20px;
@@ -24,8 +24,7 @@
 .project-image {
     width: 100%;
     height: 200px;
-    /*     object-fit: cover;
- */
+    object-fit: cover;
 }
 
 .card-body {
