--- a/src/styles/jumbo.css
+++ b/src/styles/jumbo.css
@@ -38,11 +38,11 @@
     font-family: "Bebas Neue", sans-serif;
     font-size: 100px;
     font-style: normal;
-    color: #41413D;
+    color: #000000;
 }
 
 .home-profession {
-    color: #41413D;
+    color: #000000;
 }
 
 /* Media Query para pantallas más pequeñas */
