--- a/src/styles/contactme.css
+++ b/src/styles/contactme.css
@@ -8,7 +8,7 @@
 
 .form-contact {
     transition: transform 0.3s;
-    background-color: #ffffff6f;
+    background-color: #ffffff;
     border: solid 1px #0F0F0F;
     color: white;
     font-family: "Roboto", sans-serif;
@@ -32,6 +32,7 @@
     font-size: 40px;
     font-style: normal;
     margin-bottom: 20px;
+    color: #0F0F0F
 }
 
 .git {
@@ -39,6 +40,7 @@
     font-size: 25px;
     font-style: normal;
     margin-bottom: 20px;
+    color: #0F0F0F
 }
 
 .back-to-top {
@@ -47,7 +49,7 @@
     right: 20px;
     background-color: #0F0F0F;
     /* Color de fondo de la flecha */
-    color: #008170;
+    color: #002281;
     border-radius: 50%;
     width: 50px;
     height: 50px;
