--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rakkas&display=swap');
 
 .navbar {
-    background-color: #41413D;
+    background-color: #000000;
 }
 
 .nav-link {
-    color: #6982AF;
+    color: #0b60ff;
     text-decoration: none;
     font-family: "Bebas Neue", sans-serif;
     font-size: 25px;
@@ -29,7 +29,7 @@
     /* Ocultar el nombre completo en pantallas pequeñas */
     .navbar-brand.d-none {
         display: none !important;
-        color: #6982AF;
+        color: #0b60ff;
         text-decoration: none;
         font-family: "Bebas Neue", sans-serif;
         font-size: 25px;
@@ -39,7 +39,7 @@
     /* Mostrar iniciales en pantallas pequeñas */
     .navbar-brand.d-lg-none {
         display: block !important;
-        color: #6982AF;
+        color: #0b60ff;
         text-decoration: none;
         font-family: "Bebas Neue", sans-serif;
         font-size: 25px;
