--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -8,7 +8,7 @@
 
 .project-card {
     transition: transform 0.3s;
-    background-color: #ffffff6f;
+    background-color: #ffffff;
     border: solid 1px #0F0F0F;
     color: white;
     font-family: "Roboto", sans-serif;
