--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -6,6 +6,13 @@
     flex-wrap: wrap;
 }
 
+.certificate-img {
+    width: 100%;
+    height: 250px;
+    /* Tamaño uniforme para todas las imágenes */
+    object-fit: cover;
+    /* Ajusta la imagen sin distorsionarla */
+}
 
 
 .about-image-container,
@@ -73,7 +80,8 @@
 
 
 .btn {
-    background-color: #0b60ff;
+    background-color: #616161;
+    color: white;
     border: solid 1px #0F0F0F;
     border-radius: 5px;
     text-decoration: none;
@@ -83,13 +91,8 @@
 }
 
 .btn:hover {
-    background-color: #0b60ff;
-    border: solid #6982AF;
-    border-radius: 5px;
-    text-decoration: none;
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 20px;
-    font-style: normal;
+    background-color: #0F0F0F;
+    color: white;
 }
 
 .card-title {
