--- a/src/styles/jumbo.css
+++ b/src/styles/jumbo.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rakkas&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rakkas&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 .home {
     display: flex;
@@ -35,14 +36,27 @@
 }
 
 .home-name {
-    font-family: "Bebas Neue", sans-serif;
+    color: #000000;
+    text-decoration: none;
+    font-family: "Raleway", sans-serif;
+    font-weight: 900;
     font-size: 100px;
     font-style: normal;
-    color: #000000;
+    text-transform: uppercase;
 }
 
 .home-profession {
     color: #000000;
+}
+
+.info-name-text {
+    color: #F0EDCF;
+    text-decoration: none;
+    font-family: "Raleway", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    font-style: normal;
+    text-transform: uppercase;
 }
 
 /* Media Query para pantallas más pequeñas */
@@ -60,5 +74,15 @@
         order: 1;
         text-align: left;
         padding: 20px;
+    }
+
+    .home-name {
+        color: #000000;
+        text-decoration: none;
+        font-family: "Raleway", sans-serif;
+        font-weight: 900;
+        font-size: 3.5rem;
+        font-style: normal;
+        text-transform: uppercase;
     }
 }
