--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rakkas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 .gallery-container {
     display: flex;
     justify-content: space-between;
@@ -9,10 +13,9 @@
 .project-card {
     transition: transform 0.3s;
     background-color: #ffffff;
-    border: solid 1px #0F0F0F;
+    border: solid 0px;
     color: white;
-    font-family: "Roboto", sans-serif;
-    font-size: 20px;
+    font-family: "Raleway", sans-serif;
     font-weight: 300;
     font-style: normal;
 }
@@ -25,6 +28,8 @@
     width: 100%;
     height: 200px;
     object-fit: cover;
+    padding: 10px;
+    border-radius: 30px 30px 0px 0px;
 }
 
 .card-body {
@@ -37,8 +42,8 @@
 }
 
 .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #0B60B0;
+    border-color: #0B60B0;
 }
 
 .btn-secondary {
